# pdf2svgslides

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check.yml  prs.yml
src/: main.rs
