[package]
name = "pdf2svgslides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cairo-rs = { version = "0.20.0", features = ["v1_16", "svg"] }
gio = "0.20.0"
image = { version = "0.25.2", default_features = false, features = ["jpeg"] }
poppler-rs = "0.24.1"
