[package]
name = "pdf2svgslides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
cairo-rs = { version = "0.21.1", features = ["v1_16", "svg"] }
gio = "0.21.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
pico-args = "0.5.0"
poppler-rs = "0.25.0"
